[metadata]
name = type_casting
version = attr: type_casting.__version__
description = Type Casting
url = https://github.com/kshramt/type_casting
author = kshramt
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
license_files = LICENSE.txt

[options]
zip_safe = True
packages =
    type_casting
    type_casting._common
    type_casting.py37
    type_casting.py38
    type_casting.py39
    type_casting.latest

[options.extras_require]
dev =
    black
    build
    coverage
    mypy
    pyflakes
    pylint
    pytype
    twine
